syntax = "proto3";
package org.akhq.utils;

option java_package = "org.akhq.utils";
option java_outer_classname = "AlbumProto";

message Album {
  string title = 1;
  repeated string artist = 2;
  int32 release_year = 3;
  repeated string song_title = 4;
}