syntax = "proto3";
package org.akhq.utils;

import "album.proto";
import "film.proto";
import "complexWithBookOutside.proto";

option java_package = "org.akhq.utils";
option java_outer_classname = "MultipleLayerComplexProto";

message MultipleLayerComplex {
  Album album = 1;
  Film film = 2;
  ComplexWithBookOutside complex = 3;
}